# fractal

./: .gitmodules  CMakeLists.txt
assets/shaders/: main.fs.glsl  main.vs.glsl
docs/: concept
include/: application.hxx  configuration.hxx  empty_vbo.hxx  frame_counter.hxx  image.hxx  image_region.hxx  paths.hxx  render_context.hxx  renderer.hxx  types.hxx  worker.hxx
include/gl/: program.hxx  shader.hxx  uniform.hxx
src/: application.cxx  empty_vbo.cxx  frame_counter.cxx  image.cxx  image_region.cxx  main.cxx  paths.cxx  render_context.cxx  renderer.cxx  worker.cxx
